deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: health-php-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  template:
    metadata:
      labels:
        app: health-php-app
    spec:
      containers:
        - name: health-php
          image: inknex/arch:v1
          ports:
            - name: web
              containerPort: 8080
          livenessProbe:
            httpGet:
              port: 8080
              path: /
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8080
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
